[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/battle/BattleManager.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/ui/RhythmBar.tscn" id="2_rhythm"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="EnemyPosition" type="Marker2D" parent="."]
position = Vector2(1400, 500)

[node name="Sprite2D" type="ColorRect" parent="EnemyPosition"]
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = 100.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="PlayerPosition" type="Marker2D" parent="."]
position = Vector2(500, 600)

[node name="Sprite2D" type="ColorRect" parent="PlayerPosition"]
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = 100.0
color = Color(0.2, 0.5, 0.8, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RhythmBar" parent="CanvasLayer" instance=ExtResource("2_rhythm")]

[node name="LogLabel" type="Label" parent="CanvasLayer"]
offset_left = 660.0
offset_top = 100.0
offset_right = 1260.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 32
text = "Battle Log..."
horizontal_alignment = 1

[node name="AttackButton" type="Button" parent="CanvasLayer"]
offset_left = 860.0
offset_top = 900.0
offset_right = 1060.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 24
text = "ATTACK"

[connection signal="pressed" from="CanvasLayer/AttackButton" to="." method="_on_attack_button_pressed"]
